Also include the bootstrap doc's css styles, mostly for the callouts.

--- a/app/Resources/views/macros.html.twig
+++ b/app/Resources/views/macros.html.twig
@@ -4,3 +4,10 @@
         <span class="glyphicon glyphicon-{{ icon }}"></span>
     {% endif %}
 {% endmacro %}
+        
+{% macro callout(title, text, type) %}
+    <div class="bs-callout bs-callout-{{ type|default('info') }}">
+        <h4>{{ title }}</h4>
+        <p>{{ text }}</p>
+    </div>
+{% endmacro %}
