Fix nesting of bootstrap's .row and .container.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -45,10 +45,12 @@
             {% block navbar %}
                 {% include '::navbar.html.twig' %}
             {% endblock %}
-            <div class="row container">
-                <div class="col-md-10 col-md-offset-1">
-                    {% block content %}
-                    {% endblock %}
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 col-md-offset-1">
+                        {% block content %}
+                        {% endblock %}
+                    </div>
                 </div>
             </div>
             {% block chat %}
