Make number of wall post rows configurable.

--- a/src/MinePlus/MainBundle/Resources/views/Player/show.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Player/show.html.twig
@@ -10,16 +10,19 @@
             </div>
         </div>
         <div class="col-md-9">
+            {# this config item may only contain 1, 2, 3, 4, 6 or 12 (int) #}
+            {% set rows = config('design.profile.wall_rows', 3) %}
+            
             {% for post in user.wall.posts %}
-                {% if loop.index % 2 == 1 %}
+                {% if loop.index % rows == 1 %}
                     <div class="row">
                 {% endif %}
                 
-                <div class="col-md-6 margin-top-little">
+                <div class="col-md-{{ 12 / rows }} margin-top-little">
                     {% include 'MinePlusMainBundle:Player:wall_post.html.twig'  with {'post': post} only %}
                 </div>
                             
-                {% if loop.index % 2 == 0 %}
+                {% if loop.index % rows == 0 %}
                     </div>
                 {% endif %}               
             {% endfor %}
