Make navbar items more modular.

--- a/app/Resources/views/macros.html.twig
+++ b/app/Resources/views/macros.html.twig
@@ -11,3 +11,13 @@
         <p>{{ text }}</p>
     </div>
 {% endmacro %}
+        
+{% macro navbar_item(translation, route) %}
+    {# 
+        TODO: normally this should only be used for debugging,
+        we'll find a better/safer checking mechanism!
+    #}
+    <li{% if app.request.get('_route') == route %} class="active"{% endif %}>
+        <a href="{{ path(route) }}">{{ translation|trans }}</a>
+    </li>
+{% endmacro %}
