Create infrastructure for admin settings.
Note: Also fixed an issue with the user entity.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,6 +18,9 @@
         {# For context-specific styles #}
         <style type="text/css">
             {% block styles %}
+                .navbar {
+                    border-radius: 0;
+                }
                 .chat-log {
                     height: 85%;
                     overflow-y: scroll;
