--- a/src/MinePlus/MainBundle/Resources/views/Admin/index.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Admin/index.html.twig
@@ -1,7 +1,2 @@
-{% extends "::base.html.twig" %}
+{% extends "MinePlusMainBundle:Admin:admin.html.twig" %}
 
-{% block title %}MinePlusMainBundle:Admin:index{% endblock %}
-
-{% block body %}
-    
-{% endblock %}
