Fix some translation bugs.

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -30,7 +30,7 @@
                             {% if is_granted('ROLE_ADMIN') %}
                                 <li>
                                     <a href="{{ path('mineplus_main_admin_index') }}">
-                                        {{ macro.icon('lock') }} {{ 'admin.title'|trans }}
+                                        {{ macro.icon('lock') }} {{ 'admin.area'|trans }}
                                     </a>
                                 </li>
                                 <li class="divider"></li>
