--- a/src/MinePlus/MainBundle/Resources/views/Admin/admin.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Admin/admin.html.twig
@@ -1,5 +1,5 @@
 {% extends '::base.html.twig' %}
 
-{% block title %}{{ 'admin_area'|trans }}{% endblock %}
+{% block title %}{{ 'admin.area'|trans }}{% endblock %}
 
 {% block navbar %}{% include 'MinePlusMainBundle:Admin:navbar.html.twig' %}{% endblock %}
