--- a/src/MinePlus/MainBundle/Resources/views/Admin/navbar.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Admin/navbar.html.twig
@@ -3,7 +3,7 @@
 {% block navbar_class %}navbar-inverse{% endblock %}
 
 {% block navbar_items %}
-    {{ macro.navbar_item('admin.title', 'mineplus_main_admin_index') }}
+    {{ macro.navbar_item('admin.area', 'mineplus_main_admin_index') }}
     {{ macro.navbar_item('admin.design', 'mineplus_main_admin_design') }}
 {% endblock %}
 
