--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -12,8 +12,13 @@
     <div class="collapse navbar-collapse navbar-exl-collapse">
         <ul class="nav navbar-nav">
             {% block navbar_items %}
+                {#
                 {{ macro.navbar_item('dashboard', 'dashboard') }}
                 {{ macro.navbar_item('players', 'mineplus_main_player_list') }}
+                #}
+                {% for item in navbar_items() %}
+                    {{ macro.navbar_item(item.route, item.label) }}
+                {% endfor %}
             {% endblock %}
         </ul>
         {% if is_granted('ROLE_USER') %}
