Allow users to write to walls.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -40,6 +40,9 @@
                 .margin-right-little {
                     margin-right: 10px;
                 }
+                textarea {
+                    resize: none;
+                }
             {% endblock %}
         </style>
     </head>
