Start with a config management system.

--- a/src/MinePlus/MainBundle/Resources/views/Admin/design.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Admin/design.html.twig
@@ -1,1 +1,7 @@
 {% extends 'MinePlusMainBundle:Admin:admin.html.twig' %}
+
+{% block content %}
+    {% for item in config  %}
+        {{ item.name }}
+    {% endfor %}
+{% endblock %}
