Fix a wrong translation key.

--- a/app/Resources/views/navbar.html.twig
+++ b/app/Resources/views/navbar.html.twig
@@ -49,7 +49,7 @@
             {# Chat status indicator/opener #}
             <a class="btn navbar-btn btn-primary disabled chat-indicator pull-right margin-right-little" data-toggle="modal" href="#chat-modal">{{ 'chat.open'|trans }}</a>
         {% else %}
-            <a class="btn navbar-btn btn-default pull-right" href="{{ path('fos_user_security_login') }}">{{ 'login'|trans }}</a>
+            <a class="btn navbar-btn btn-default pull-right" href="{{ path('fos_user_security_login') }}">{{ 'login.login'|trans }}</a>
         {% endif %}
     </div>
 </nav>
