--- a/src/MinePlus/MainBundle/Resources/views/Admin/admin.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Admin/admin.html.twig
@@ -2,4 +2,6 @@
 
 {% block title %}{{ 'admin.area'|trans }}{% endblock %}
 
-{% block navbar %}{% include 'MinePlusMainBundle:Admin:navbar.html.twig' %}{% endblock %}
+{% block navbar %}
+    {% include '::navbar.html.twig' with {'navbar_category': 'admin'}%}
+{% endblock %}
