--- a/src/MinePlus/MainBundle/Resources/views/Menu/bootstrap.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Menu/bootstrap.html.twig
@@ -32,6 +32,14 @@
         {% if is_granted('ROLE_USER') %}
             {% if user_context|default(true) == true %}
                 <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a href="{{ path('fos_message_inbox') }}">
+                            {{ macro.icon('envelope') }}
+                            {% if fos_message_nb_unread() != 0 %}
+                                <span class="label label-warning">{{ fos_message_nb_unread() }}</span>
+                            {% endif %}
+                        </a>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             {{ avatar(app.user.username, avatar_size|default(20))|raw }}
