--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -52,7 +52,7 @@
     <body class="{% block body_class %}{% endblock %}">
         {% block body %}
             {% block navbar %}
-                {{ knp_menu_render('MinePlusMainBundle:Builder:mainMenu', {}, 'bootstrap') }}
+                {{ knp_menu_render('MinePlusMainBundle:Builder:mainMenu', {}, 'main') }}
             {% endblock %}
             <div class="container">
                 <div class="row">
