--- a/src/MinePlus/MainBundle/Resources/views/Menu/list.html.twig
+++ b/src/MinePlus/MainBundle/Resources/views/Menu/list.html.twig
@@ -1,3 +1,5 @@
+{% import '::macros.html.twig' as macro %}
+
 <ul {{ ul_attributes|default|raw }}>
     {% for item in menu %}
         <li {% if item.isCurrent %}class="active"{% endif %}>
