--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,44 +12,11 @@
         {% block stylesheets %}
             {% stylesheets 
                 '@bootstrap_css'
-                '@bootstrap_docs_css' %}
+                '@bootstrap_docs_css' 
+                '@MinePlusMainBundle/Resources/public/less/styles.less' %}
                 <link rel="stylesheet" type="text/css" href="{{ asset_url }}" />
             {% endstylesheets %}
         {% endblock %}
-        
-        {# For context-specific styles #}
-        <style type="text/css">
-            {% block styles %}
-                .navbar {
-                    border-radius: 0;
-                }
-                .chat-log {
-                    height: 85%;
-                    overflow-y: scroll;
-                }
-                .chat-input {
-                    padding: 10px;
-                }
-                .max-size {
-                    max-width: 100%;
-                    max-height: 100%;
-                    width: 100%;
-                    height: 100%;
-                }
-                .margin-top-little {
-                    margin-top: 10px;
-                }
-                .margin-right-little {
-                    margin-right: 10px;
-                }
-                .padding-left-little {
-                    padding-left: 10px;
-                }
-                textarea {
-                    resize: none;
-                }
-            {% endblock %}
-        </style>
     </head>
     <body class="{% block body_class %}{% endblock %}">
         {% block body %}
