load jquery from composer

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -42,7 +42,7 @@
             {# I don't import just the entire js/ directory because the order
             is important here! #}
             {% javascripts 
-                '@MinePlusMainBundle/Resources/public/js/jquery.min.js' 
+                '@jquery' 
                 '@bootstrap_js'
                 '@JDareClankBundle/Resources/public/js/*'
                 '@JDareClankBundle/Resources/public/js/vendor/*'
