--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -25,7 +25,10 @@
                     {% block brand %}{% endblock %} {# empty as we have no access to the menu instance #}
                     
                     {% block menu %}
-                        {{ mopa_bootstrap_menu('MinePlusMainBundle:Builder:mainMenu', {'automenu': 'navbar'}) }}
+                        {{ mopa_bootstrap_menu('MinePlusMainBundle:Builder:mainMenu') }}
+                        {% if is_granted('ROLE_USER') %}
+                            {{ mopa_bootstrap_menu('MinePlusMainBundle:Builder:userContext') }}
+                        {% endif %}
                     {% endblock %}
                 {% endembed %}
             {% endblock %}
